# Sw-Test

./: CMakeLists.txt  README.md
include/: fxns.hh
lib/: fxns.cc
src/: main.cc
test/: CMakeLists.txt  tests.cc
